update post: What is MVC Routing in .NET?

--- a/cm961lb3o000509jr1dq52pp6.md
+++ b/cm961lb3o000509jr1dq52pp6.md
@@ -15,7 +15,7 @@ It might seem like magic, but there is a method in .NET to how you are able to v
 
 ## What Is MVC Routing 
 
-MVC stands for Model-View-Controller and is a programming design pattern implemented in .NET MVC. If you’re unfamiliar with this pattern, then go ahead and read an explanation about it in my earlier post [here](https://hashnode.com/post/cm90uaefk001f09jn2soq7bhk). 
+MVC stands for Model-View-Controller and is a programming design pattern implemented in .NET MVC. If you’re unfamiliar with this pattern, then go ahead and read an explanation about it in my earlier post [here](https://chikeredev.hashnode.dev/what-is-mvc). 
 
 ***MVC routing*** *is the method to how we navigate to pages in .NET MVC web applications. When the user submits a URL into the address bar of the web browser, the URL is mapped to the controller action, which returns the correct web page into the browser.* 
 
